--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "eslint": "^4.13.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-react": "^7.5.1",
     "prettier": "^1.8.2"
   }
 }
