--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-plugin-react-helmet": "^1.0.8",
     "gatsby-plugin-styled-components": "^2.0.3",
     "gatsby-source-prismic": "^0.1.4",
+    "react-transition-group": "^2.2.1",
     "styled-components": "^2.2.4"
   },
   "keywords": [
