--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "gatsby": "^1.9.127",
     "gatsby-link": "^1.6.30",
+    "gatsby-plugin-favicon": "^2.1.1",
     "gatsby-plugin-netlify": "^1.0.9",
     "gatsby-plugin-nprogress": "^1.0.8",
     "gatsby-plugin-react-helmet": "^1.0.8",
